# agents

./: .gitignore
.github/workflows/: terraform-drift-detector.yml  (+2 more)
ADK/devops-research-agent/: .gitignore  AGENTS.md  Dockerfile  README.md  agents-cli-manifest.yaml  deployment_metadata.json  hello_antigravity.py  hello_world.py  pyproject.toml  test_adk_run.py  test_client_run.py  test_resolve.py
ADK/devops-research-agent/evals/: eval_config.json  mcp_tools_usage.evalset.json
ADK/devops-research-agent/my_agent/: agent.py  cloud_run_mcp.py  fast_api_app.py  google_search_mcp.py  google_search_mcp_server.py  requirements.txt
ADK/devops-research-agent/my_agent/app_utils/: reasoning_engine_adapter.py  telemetry.py  typing.py
ADK/devops-research-agent/patterns/.adk/: session.db
ADK/devops-research-agent/patterns/agent_to_agent/: .env.example  README.md  agent.py  server.py
ADK/devops-research-agent/patterns/conditional_routing/: README.md  agent.py
ADK/devops-research-agent/patterns/guardrails_callbacks/: README.md  agent.py
ADK/devops-research-agent/patterns/human_in_the_loop/: .env.example  README.md  agent.py
ADK/devops-research-agent/scripts/: check_gemini_oauth.py
ADK/devops-research-agent/tests/: test_adk_google_search.py  test_agent.py  test_cloud_run_mcp.py  test_conditional_routing.py  test_google_search_mcp.py  test_guardrails_callbacks.py  test_human_in_the_loop.py  test_loop_workflow.py  test_mcp_tools_usage.py  test_parallel_workflow.py  test_pattern_layout.py  test_research_agent.py  test_sequential_pipeline.py  test_sequential_workflow.py
(+21 files in other folders)
